<layout>

    <data>

        <variable name="adUtil" type="com.mobilesoftware.zekaoyunu.domain.util.AdUtil" />
        <import type="com.mobilesoftware.zekaoyunu.domain.enums.ad.AdTarget" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearShopDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_dialog_box"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/dialog_ico_shop" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:maxWidth="200dp"
                        android:minLines="2"
                        android:text="@string/watch"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:maxWidth="200dp"
                        android:minLines="2"
                        android:text="@string/selectProduct"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btnAddCoin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/orange"
                            android:text="@string/addcoin_one"
                            android:textAllCaps="false"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold"
                            android:onClick="@{() -> adUtil.showInterstitial(AdTarget.ADDCOIN)}"/>

                        <Button
                            android:id="@+id/btnAddBonusNew"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:backgroundTint="#03A9F4"
                            android:text="@string/addcoin_new_question"
                            android:textAllCaps="false"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold"
                            android:onClick="@{() -> adUtil.showInterstitial(AdTarget.BONUSNEWQUESTION)}"/>

                        <Button
                            android:id="@+id/btnAddBonusHalf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:backgroundTint="#03A9F4"
                            android:text="@string/addcoin_Half"
                            android:textAllCaps="false"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold"
                            android:onClick="@{() -> adUtil.showInterstitial(AdTarget.BONUSHALF)}"/>

                        <Button
                            android:id="@+id/btnAddBonusAddTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:backgroundTint="#03A9F4"
                            android:text="@string/addcoin_addtime"
                            android:textAllCaps="false"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold"
                            android:onClick="@{() -> adUtil.showInterstitial(AdTarget.BONUSADDTIME)}"/>

                        <Button
                            android:id="@+id/btnAddBonusStopTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:backgroundTint="#03A9F4"
                            android:text="@string/addcoin_stoptime"
                            android:textAllCaps="false"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold"
                            android:onClick="@{() -> adUtil.showInterstitial(AdTarget.BONUSSTOPTIME)}"/>

                        <Button
                            android:id="@+id/btnAddAll"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/orange"
                            android:text="@string/addcoin_all"
                            android:textAllCaps="false"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold"
                            android:onClick="@{() -> adUtil.showRewarded()}"/>

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/linearShopDialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearShopDialog">

            <ImageButton
                android:id="@+id/btnOkey"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_ico_okey"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </LinearLayout>

</layout>